:feat: add aside

--- a/index.html
+++ b/index.html
@@ -4,9 +4,67 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<link rel="stylesheet" href="../rsschool-cv/css/style.css">
+	<title>CV</title>
 </head>
 <body>
-	<img src="../../avanagit.png" alt="">
+	<div class="wraper">
+		<div class="container">
+			<aside>
+				<div class="my-photo">
+					<div class="my-photo_border"></div>
+				</div>
+				<div class="info">
+					<div class="info__header">
+						<div class="info__title">contact</div>
+						<div class="info__spot"></div>
+					</div>
+					<div class="info__item">
+						<div class="item__icon item__icon_mail"></div>
+						<div class="item__contact">sivilrishar@yandex.ru</div>
+					</div>
+					<div class="info__item">
+						<div class="item__icon item__icon_location"></div>
+						<div class="item__contact">Russia, Tatarstan</div>
+					</div>
+				</div>
+				<div class="info">
+					<div class="info__header">
+						<div class="info__title">Personal</div>
+						<div class="info__spot"></div>
+					</div>
+					<div class="info__item info__item_per">
+						<div class="item__name">Birthday</div>
+						<div class="item__ansv">
+							<div class="ansv__colon">:</div>
+				         <div class="ansv__data">11th August 1998</div>
+						</div>
+					</div>
+					<div class="info__item info__item_per">
+						<div class="item__name">Relationship</div>
+						<div class="item__ansv">
+							<div class="ansv__colon">:</div>
+				         <div class="ansv__data">Single</div>
+						</div>
+					</div>
+					<div class="info__item info__item_per">
+						<div class="item__name">Nationality</div>
+						<div class="item__ansv">
+							<div class="ansv__colon">:</div>
+				         <div class="ansv__data">Tatar</div>
+						</div>
+					</div>
+					<div class="info__item info__item_per">
+						<div class="item__name">Languages</div>
+						<div class="item__ansv">
+							<div class="ansv__colon">:</div>
+				         <div class="ansv__data">Ru, Tat, En (A1-A2)</div>
+						</div>
+					</div>
+				</div>
+			</aside>
+		   <section>Пока</section>
+		</div>
+	</div>
 </body>
 </html>
