feat: add mainblock

--- a/index.html
+++ b/index.html
@@ -58,12 +58,136 @@
 						<div class="item__name">Languages</div>
 						<div class="item__ansv">
 							<div class="ansv__colon">:</div>
-				         <div class="ansv__data">Ru, Tat, En (A1-A2)</div>
+				         <div class="ansv__data">Ru, Tat, En (A2)</div>
 						</div>
 					</div>
 				</div>
+				<div class="info">
+					<div class="info__header">
+						<div class="info__title">Education</div>
+						<div class="info__spot"></div>
+					</div>
+					<div class="info__item">
+						<div class="item">Kazan National Research Technical University
+							named after A. N. Tupolev - KAI 2020</div>
+					</div>
+				</div>
 			</aside>
-		   <section>Пока</section>
+		   <section class="main">
+				<div class="sectcontainer">
+					<header>
+						<div class="title">Dilyara Arslanova</div>
+						<nav>
+							<ul class="navlist">
+								<li class="navlist__item"><a href="#aboutme">About me</a></li>
+								<li class="navlist__item"><a href="#myskill">My Skill</a></li>
+								<li class="navlist__item"><a href="#experiense">Experiense</a></li>
+								<li class="navlist__item"><a href="#codeexmp">Code Example</a></li>
+							</ul>
+						</nav>
+					</header>
+					<section class="main-info">
+						<div class="main-info__item">
+						  <div class="main-info__header">
+							  <div class="main-info__title"><a name="aboutme"></a>About me</div>
+							  <div class="main-info__spot"></div>
+						  </div>
+						  <div class="main-info__body">
+							  <div class="main-info__text">
+								  I am a person who once decided to try his hand at web development. And I like the direction in which I am now moving. In the future, I want to work in this field. At the moment, I study on my own, reading books, watching video courses on YouTube and consolidating the knowledge gained in practice.
+							  </div>
+							</div>
+						</div>
+						<div class="main-info__item">
+							<div class="main-info__header">
+								<div class="main-info__title"><a name="myskill"></a>My skill</div>
+								<div class="main-info__spot"></div>
+							</div>
+							<div class="main-info__body">
+								<ul class="body__list" >
+									<li class="list__item">
+										<div class="item__appellation">Photoshop</div>
+										<progress max="100" value="70" ></progress>
+										<div class="item__data">70%</div>
+									</li>
+									<li class="list__item">
+										<div class="item__appellation">HTML5</div>
+										<progress max="100" value="80" ></progress>
+										<div class="item__data">80%</div>
+									</li>
+									<li class="list__item">
+										<div class="item__appellation">CSS3 Scss/Sass</div>
+										<progress max="100" value="50" ></progress>
+										<div class="item__data">50%</div>
+									</li>
+									<li class="list__item">
+										<div class="item__appellation">BEM</div>
+										<progress max="100" value="40" ></progress>
+										<div class="item__data">40%</div>
+									</li>
+									<li class="list__item">
+										<div class="item__appellation">JS</div>
+										<progress max="100" value="30" ></progress>
+										<div class="item__data">30%</div>
+									</li>
+									<li class="list__item">
+										<div class="item__appellation">GULP</div>
+										<progress max="100" value="20" ></progress>
+										<div class="item__data">20%</div>
+									</li>
+								</ul>
+							 </div>
+						 </div>
+						 <div class="main-info__item">
+							<div class="main-info__header">
+								<div class="main-info__title"><a name="experiense"></a>Experiense</div>
+								<div class="main-info__spot"></div>
+							</div>
+							<div class="main-info__body">
+								<div class="main-info__text">
+									I have little development experience. Basically, these are educational projects from YouTube, which are stored on my computer.
+								</div>
+							 </div>
+						 </div>
+						 <div class="main-info__item">
+							<div class="main-info__header">
+								<div class="main-info__title"><a name="codeexmp"></a>Code Example</div>
+								<div class="main-info__spot"></div>
+							</div>
+							<div class="main-info__body">
+								<div class="main-info__text main-info__text_task">
+									<span class="key-word">Task:</span> Johnny is a farmer and he annually holds a beet farmers convention "Drop the beet". Every year he takes photos of farmers handshaking. Johnny knows that no two farmers handshake more than once. He also knows that some of the possible handshake combinations may not happen. However, Johnny would like to know the minimal amount of people that participated this year just by counting all the handshakes. Help Johnny by writing a function, that takes the amount of handshakes and returns the minimal amount of people needed to perform these handshakes (a pair of farmers handshake only once).<br><br>
+									<span class="key-word">My solution:</span>
+								</div>
+								<div class="main-info__code-exp"> 
+									<code> getParticipants(handshakes){
+									<pre>	let num = 0;</pre>
+									<pre>	let count = 1;</pre>
+									<pre>	if (handshakes <= num){</pre>
+									<pre>	  return 0</pre>
+									<pre>	} else { </pre>
+									<pre>	  while (!(handshakes <= num)){</pre>
+									<pre>		 num += count;</pre>
+								   <pre>		 count++</pre>
+								   <pre>	  }</pre>
+								   <pre>	  return count </pre>
+								   <pre>	}</pre>
+								   <pre> }</pre></code>
+								</div>
+							 </div>
+						 </div>
+					</section>
+					<footer>
+						<div class="github-icon">
+							<a class="github-icon__link" href="https://github.com/SiViLiLL"></a>
+						</div>
+						<div class="year">2022</div>
+						<div class="rs-school-icon">
+							<a class="rs-school-icon__link" href="https://rs.school/js/"></a>
+						</div>
+					</footer>
+				</div>
+			</section>
 		</div>
 	</div>
 </body>
