fix: valid html

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 		   <section class="main">
 				<div class="sectcontainer">
 					<header>
-						<div class="title">Dilyara Arslanova</div>
+						<div class="title"><h1>Dilyara Arslanova</h1></div>
 						<nav>
 							<ul class="navlist">
 								<li class="navlist__item"><a href="#aboutme">About me</a></li>
@@ -86,10 +86,10 @@
 							</ul>
 						</nav>
 					</header>
-					<section class="main-info">
+					<div class="main-info">
 						<div class="main-info__item">
 						  <div class="main-info__header">
-							  <div class="main-info__title"><a name="aboutme"></a>About me</div>
+							  <div class="main-info__title"><a id="aboutme"></a>About me</div>
 							  <div class="main-info__spot"></div>
 						  </div>
 						  <div class="main-info__body">
@@ -100,7 +100,7 @@
 						</div>
 						<div class="main-info__item">
 							<div class="main-info__header">
-								<div class="main-info__title"><a name="myskill"></a>My skill</div>
+								<div class="main-info__title"><a id="myskill"></a>My skill</div>
 								<div class="main-info__spot"></div>
 							</div>
 							<div class="main-info__body">
@@ -140,7 +140,7 @@
 						 </div>
 						 <div class="main-info__item">
 							<div class="main-info__header">
-								<div class="main-info__title"><a name="experiense"></a>Experiense</div>
+								<div class="main-info__title"><a id="experiense"></a>Experiense</div>
 								<div class="main-info__spot"></div>
 							</div>
 							<div class="main-info__body">
@@ -151,7 +151,7 @@
 						 </div>
 						 <div class="main-info__item">
 							<div class="main-info__header">
-								<div class="main-info__title"><a name="codeexmp"></a>Code Example</div>
+								<div class="main-info__title"><a id="codeexmp"></a>Code Example</div>
 								<div class="main-info__spot"></div>
 							</div>
 							<div class="main-info__body">
@@ -160,23 +160,23 @@
 									<span class="key-word">My solution:</span>
 								</div>
 								<div class="main-info__code-exp"> 
-									<code> getParticipants(handshakes){
-									<pre>	let num = 0;</pre>
-									<pre>	let count = 1;</pre>
-									<pre>	if (handshakes <= num){</pre>
-									<pre>	  return 0</pre>
-									<pre>	} else { </pre>
-									<pre>	  while (!(handshakes <= num)){</pre>
-									<pre>		 num += count;</pre>
-								   <pre>		 count++</pre>
-								   <pre>	  }</pre>
-								   <pre>	  return count </pre>
-								   <pre>	}</pre>
-								   <pre> }</pre></code>
+									<code> getParticipants(handshakes){ <br>
+										let num = 0;<br>
+										let count = 1;<br>
+										if (handshakes &lt;&#61; num){<br>
+									     return 0<br>
+									   } else { <br>
+										  while (!(handshakes &lt;&#61; num)){<br>
+											 num += count;<br>
+								   		 count++<br>
+								   	  }<br>
+								     return count <br>
+								   	}<br>
+								    }</code>
 								</div>
 							 </div>
 						 </div>
-					</section>
+					</div>
 					<footer>
 						<div class="github-icon">
 							<a class="github-icon__link" href="https://github.com/SiViLiLL"></a>
