fix: add h2 title

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 					</div>
 				</div>
 			</aside>
-		   <section class="main">
+		   <main class="main">
 				<div class="sectcontainer">
 					<header>
 						<div class="title"><h1>Dilyara Arslanova</h1></div>
@@ -89,7 +89,7 @@
 					<div class="main-info">
 						<div class="main-info__item">
 						  <div class="main-info__header">
-							  <div class="main-info__title"><a id="aboutme"></a>About me</div>
+							  <div class="main-info__title"><a id="aboutme"></a><h2>About me</h2></div>
 							  <div class="main-info__spot"></div>
 						  </div>
 						  <div class="main-info__body">
@@ -100,7 +100,7 @@
 						</div>
 						<div class="main-info__item">
 							<div class="main-info__header">
-								<div class="main-info__title"><a id="myskill"></a>My skill</div>
+								<div class="main-info__title"><a id="myskill"></a><h2>My skill</h2></div>
 								<div class="main-info__spot"></div>
 							</div>
 							<div class="main-info__body">
@@ -140,7 +140,7 @@
 						 </div>
 						 <div class="main-info__item">
 							<div class="main-info__header">
-								<div class="main-info__title"><a id="experiense"></a>Experiense</div>
+								<div class="main-info__title"><a id="experiense"></a><h2>Experiense</h2></div>
 								<div class="main-info__spot"></div>
 							</div>
 							<div class="main-info__body">
@@ -151,7 +151,7 @@
 						 </div>
 						 <div class="main-info__item">
 							<div class="main-info__header">
-								<div class="main-info__title"><a id="codeexmp"></a>Code Example</div>
+								<div class="main-info__title"><a id="codeexmp"></a><h2>Code Example</h2></div>
 								<div class="main-info__spot"></div>
 							</div>
 							<div class="main-info__body">
@@ -187,7 +187,7 @@
 						</div>
 					</footer>
 				</div>
-			</section>
+			</main>
 		</div>
 	</div>
 </body>
